// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`idle adult: the creature alone 1`] = `
"           ▄▀▀▄       ▄▀▀▄█▀█
           █████▄▄▄▄▄█████▀▀▀
        ▄▀███▀█████████▀███▀▄
        ████▀█▀███████▀█▀████
        █████████▀▀▀█████████
         ███████▀▀▀▀▀███████
          ▀▀▀▀█▀▀▀▀▀▀▀█▀▀▀▀
           ▄▀███████████▀▄ █
          ████████████████ ▀
          █▀▀█       █▀▀█"
`;

exports[`hurt egg: draws the egg, no mood or xp text 1`] = `
"               ▄█▀▀▄▄▄
             ▄▀███████▀▄
            ▄▀█████████▀▄
            ██▀▀▀▀▀█▀▀▀██
            ██▀█▀▀▀█▀▀▀██
            ████████▀▀▀██
            █████████████
            █████████████
             ███████████
              ▀▀▀▀▀▀▀▀▀"
`;

exports[`a Bubble sits above the sprite; petting changes the drawn sprite 1`] = `
"              .------.
             ( May I? )
              '---o--'
           ▄▀▀▄  ▄ ▄  ▄▀▀▄█▀█
           ███████████████▀▀▀
        ▄▀██▀█▀██▀█▀██▀█▀██▀▄
        █████▀█████████▀█████
        █████████▀▀▀█████████
         ███████▀▀▀▀▀███████
          ▀▀▀▀█▀▀▀▀▀▀▀█▀▀▀▀
           ▄▀███████████▀▄ █
          ████████████████ ▀
          █▀▀█       █▀▀█"
`;

exports[`a pending Draw changes the drawn sprite; none without one 1`] = `
"           ███▀▄     ▄▀████▀█
           ██████▄▄▄██████▀▀▀
        ▄▀███▀█████████▀███▀▄
        ████▀█▀███████▀█▀████
        ▀████████▀▀▀████████▀
         ███████▀▀▀▀▀███████
          ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
           ▄▀███████████▀▄ █
          ██████████████▀▄ ▀
          █▀▀█       █▀▀█"
`;
